Fix spacing in lateral navigation wells

--- a/static/scss/base/vertical-nav.scss
+++ b/static/scss/base/vertical-nav.scss
@@ -42,5 +42,9 @@ nav[aria-labelledby="lateral-navigation"] {
         border-radius: 0.25rem;
         padding: .5em;
         margin-top: 2em;
+
+        a.btn, button {
+            margin-bottom: 0;
+        }
     }
 } 
